1932.	[bug]		hpux: LDFLAGS was getting corrupted. [RT #15530]

1931.	[bug]		Per-client mctx could require a huge amount of memory,
			particularly for a busy caching server. [RT #15519]

1930.	[port]		HPUX: ia64 support. [RT #15473]

1929.	[port]		FreeBSD: extend use of PTHREAD_SCOPE_SYSTEM.

1928.	[bug]		Race in rbtdb.c:currentversion(). [RT #15517]

1927.	[bug]		Access to soanode or nsnode in rbtdb violated the
			lock order rule and could cause a dead lock.
			[RT# 15518]

1926.	[bug]		The Windows installer did not check for empty
			passwords.  BINDinstall was being installed in
			the wrong place. [RT #15483]

1925.	[port]		All outer level AC_TRY_RUNs need cross compiling
			defaults. [RT #15469]

1924.	[port]		libbind: hpux ia64 support. [RT #15473]

1923.	[bug]		ns_client_detach() called too early. [RT #15499]

1922.	[bug]		check-tool.c:setup_logging() missing call to
			dns_log_setcontext().

1921.	[bug]		Client memory contexts were not using internal
			malloc. [RT# 15434]

1920.	[bug]		The cache rbtdb lock array was too small to
			have the desired performance characteristics.
			[RT #15454]

1919.	[placeholder]	rt15441

1918.	[bug]		Memory leak when checking acls. [RT #15391]

1917.	[doc]		funcsynopsisinfo wasn't being treated as verbatim
			when generating man pages. [RT #15385]

1916.	[func]		Integrate contibuted IDN code from JPNIC. [RT #15383]

1915.	[bug]		dig +ndots was broken. [RT #15215]

1914.	[protocol]	DS is required to accept mnemonic algorithms
			(RFC 4034).  Still emit numeric algorithms for
			compatability with RFC 3658. [RT #15354]

1913.	[func]		Integrate contibuted DLZ code into named. [RT #11382]

1912.	[port]		aix: atomic locking for powerpc. [RT #15020]

1911.	[bug]		Update windows socket code. [RT #14965]

1910.	[bug]		dig's +sigchase code overhauled. [RT #14933]

1909.	[bug]		The DLV code has been re-worked to make no longer
			query order sensitive. [RT #14933]

1908.	[func]		dig now warns if 'RA' is not set in the answer when